# NexTool-Windows-Suite

./: .gitignore  AdminLaunchOption.bat  AdminLaunchOption.ps1  LICENSE  NexTool-Dev.py  NexTool.py  NexTool.spec  NexTool_Functions_Summary.md  NexTool_Functions_Summary_Enhanced.md  README.md  Revised-AdminLaunchOption.bat  base.cmd  pyproject.toml  test.ps1
.github/: labeler.yml
.github/workflows/: build.yml  ci.yml  publish.yml  python-publish.yml
Extras/: Block-Run.py
Modules/: BACKUP_AND_RESTORE.py  DriverUpdaterManager.py  MBR2GPT.py  OfficeSetupManager.py  Services-Manager.py  Windows-Install-Test1.py  Windows-Install-Test2.py  backuprestore.bat
Modules/Windows-Install/: deployment_manager.py  disk_manager.py  main_app.py  media_manager.py  utils.py  wim_manager.py
docs/source/: conf.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
template/: NexTool_Kivy_UI.py  NexTool_Tkinter_UI.py  NexTool_UI.py
