[tool.poetry]
name = "nextool"
version = "0.1.0"
description = "Windows Suite build with Python"
authors = ["coff33ninja"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psutil = "^5.9.5"
pywin32 = "^306"
setuptools = "^68.2.2"
pyqt5 = "^5.15.0"
pyqt5-tools = "^5.15.9.3.3"
pyqt5-stubs = "^5.15.6.0"
pyqtgraph = "^0.13.3"
pyqt6 = "^6.5.3"
pyqt6-tools = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
