[tool.poetry]
name = "nextool"
version = "0.1.0"
description = "Comprehensive Windows Suite built with Python for system management and optimization"
authors = ["coff33ninja"]
readme = "README.md"
homepage = "https://github.com/coff33ninja/NexTool-Windows-Suite"
repository = "https://github.com/coff33ninja/NexTool-Windows-Suite"
license = "MIT"  # Add appropriate license
keywords = ["windows", "system-tools", "optimization"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psutil = "^5.9.5"
pywin32 = "^306"
setuptools = "^68.2.2"
# Choose either PyQt5 or PyQt6, not both
pyqt6 = "^6.5.3"
pyqt6-tools = "^6.4.0"
pyqtgraph = "^0.13.3"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.1.0"
black = "^23.0.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nextool = "nextool.main:main"